Fix #451 Entry links should wrap

--- a/client/scss/entry.scss
+++ b/client/scss/entry.scss
@@ -264,6 +264,7 @@
       font-size: 1.3rem;
       font-weight: bold;
       padding: 4px;
+      white-space: normal;
 
       & .fas,
       & .far,
